--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "supertest": "^6.1.3"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.5.1",
+    "sequelize": "^6.5.0"
   }
 }
