--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: node_js
 node_js: 12
 services: postgresql
 before_script:
-  - psql -c 'create database acme_db;' -U postgres
+  - psql -c 'create database acme_db_test;' -U postgres
