--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "test:dev": "npm run test -- --watch"
+    "test:dev": "DATABASE_URL=postgres://localhost/acme_db_test npm run test -- --watch",
+    "start:dev": "nodemon server"
   },
   "repository": {
     "type": "git",
