--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "DATABASE_URL=postgres://localhost/acme_db_test mocha",
     "test:dev": "DATABASE_URL=postgres://localhost/acme_db_test npm run test -- --watch",
     "start:dev": "nodemon server"
   },
