--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "mocha",
     "test:dev": "DATABASE_URL=postgres://localhost/acme_db_test npm run test -- --watch",
-    "start:dev": "nodemon server"
+    "start:dev": "nodemon server",
+    "start": "node server"
   },
   "repository": {
     "type": "git",
